<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="uw.tacoma.edu.paidaid.authenticate.LoginFragment"
        android:weightSum="1">

        <!-- Paid Aid Image View -->
        <ImageView
            android:id="@+id/paidaid"
            android:layout_width="236dp"
            android:layout_height="198dp"
            android:src="@drawable/paidaid"
            android:scaleType="fitCenter"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.506"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/paidAidBlue"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/dont_have_account_question_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintVertical_bias="0.545" />

        <!-- Username text box with hint -->
        <EditText
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:textColor="@color/grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/paidaid"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- Password text box with hint -->
        <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="......."
            android:textColor="@color/grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/paidaid"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- Don't have account text view -->
        <TextView
            android:id="@+id/dont_have_account_question_text"
            android:layout_width="189dp"
            android:layout_height="23dp"
            android:text="@string/no_account"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_now_button"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- Sign up now button-->
        <Button
            android:id="@+id/sign_up_now_button"
            android:layout_width="149dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/grey"
            android:text="Sign up now!"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>